<resources>
    <string name="app_name">HM Service</string>
    <string name="alert_error_network">Network Error</string>
    <string name="login">Đăng nhập</string>
    <string name="add_job">Thêm công việc</string>
    <string name="add_time">Thêm thời gian</string>
    <string name="add_minute">Thêm số phút</string>
    <string name="extra_area">Khu vực làm việc...</string>
    <string name="extra_floor">Tầng...</string>
    <string name="mota_login">Xin mời quý khách hàng đăng nhập để trải nghiệm dịch vụ của Hoàn Mỹ</string>
    <string name="hint_account_pass">Tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_search">Nhập tên nhân viên</string>
    <string name="loss_password">Quên mật khẩu?</string>
    <string name="create_new_account">Đăng ký tài khoản mới.</string>
    <string name="description_main">Công ty TNHH Hoàn Mỹ</string>
    <string name="manage_job">Quản lý công việc</string>
    <string name="list_project">Danh sách dự án</string>
    <string name="list_employee">Danh sách nhân viên</string>
    <string name="manage_job_extra">Phát Sinh</string>
    <string name="input_job_extra">Công việc phát Sinh</string>
    <string name="input_feedback">Đánh giá công việc</string>
    <string name="appIdZalo">1219765622989422682</string>
    <string name="status_error_login">*Username or Password is incorrect! Please try again.</string>
    <string name="notification">Thông Báo</string>
    <string name="status_login">STATUS_LOGIN</string>
    <string name="text_tab_process">Đang làm</string>
    <string name="text_tab_done">Đã làm</string>
    <string name="text_job_done">Đã xong</string>
    <string name="text_done_job">Hoàn Thành</string>
    <string name="notification_task_done">Bạn chưa hoàn thành công việc nào.</string>
    <string name="notification_task_process">Bạn đã hoàn thành hết công việc được giao.</string>
    <string name="text_dialog_ok">Đồng ý</string>
    <string name="text_dialog_cancel">Bỏ qua</string>
    <string name="text_pause">Tạm dừng</string>
    <string name="text_resume">Tiếp tục</string>
    <string name="text_done">Hoàn thành</string>
    <string name="text_extra">Phát sinh</string>
    <string name="content_pause">Bạn có chắc chắn muốn tạm dừng công việc đang làm?</string>
    <string name="content_resume">Bạn có chắc chắn muốn tiếp tục công việc đang làm?</string>
    <string name="content_done">Bạn đã hoàn thành công việc đang làm?</string>
    <string name="content_extra">Có công việc mới phát sinh cần làm?</string>
    <string name="text_end_extra">Kết thúc việc phát sinh</string>
    <string name="no_selection">no choice</string>
    <string name="refresh_list_staff">Đang cập nhật lại thời gian công việc</string>
    <string name="toast_done_job">Chưa tới thời gian làm công việc tiếp theo. </string>
    <string name="default_notification_channel_id">chanel1</string>
    <string name="msg_subscribed">đăng ký nhận thông báo thành công</string>
    <string name="msg_subscribe_failed">đăng ký nhận thông báo thất bại</string>
    <string name="notification_channel_id">com.hoanmy.kleanco</string>

    <string-array name="project_arr">
        <item>Tên Dự Án</item>
        <item>Dự Án A</item>
        <item>Dự Án B</item>
        <item>Dự Án C</item>
        <item>Dự Án Tòa Nhà CT12</item>
        <item>Dự Án Roman</item>
    </string-array>

    <string-array name="employee_arr">
        <item>Tên Nhân Viên</item>
        <item>Nguyễn Văn A</item>
        <item>Nguyễn Văn B</item>
        <item>Nguyễn Văn C</item>
        <item>Nguyễn Văn Tòa Nhà CT12</item>
        <item>Nguyễn Văn Roman</item>
    </string-array>

    <string-array name="job_arr">
        <item>Tên Công Việc</item>
        <item>Công việc A</item>
        <item>Công việc B</item>
        <item>Công việc C</item>
        <item>Công việc Tòa Nhà CT12</item>
        <item>Công việc Roman</item>
    </string-array>

    <string-array name="frequency_arr">
        <item>Tần Suất</item>
        <item>Hàng ngày</item>
        <item>Thứ 2 hàng tuần</item>
        <item>Thứ 3 hàng tuần</item>
        <item>Thứ 4 hàng tuần</item>
        <item>Thứ 5 hàng tuần</item>
        <item>Thứ 6 hàng tuần</item>
        <item>Thứ 7 hàng tuần</item>
        <item>Chủ nhật hàng tuần</item>
    </string-array>
</resources>