<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_35sdp"
            android:scaleType="centerInside"
            android:src="@drawable/home_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:src="@drawable/ic_backspace_36"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_25sdp"
            android:fontFamily="@font/calibrib"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="@dimen/_25sdp">

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri"
            android:text="@string/mota_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/border_radius_edittext"
            android:fontFamily="@font/calibri"
            android:maxLines="1"
            android:hint="@string/hint_account_pass"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_key" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:maxLines="1"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_radius_edittext"
            android:fontFamily="@font/calibri"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_key" />
        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/status_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:fontFamily="@font/calibri"
            android:text="@string/status_error_login"
            android:textColor="@color/red"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/border_radius_button"
            android:fontFamily="@font/calibri"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />


    </LinearLayout>

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/tv_loss_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/calibri"
        android:text="@string/loss_password"
        android:textColor="@color/color_key"
        android:textSize="@dimen/_13sdp" />

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/tv_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/calibri"
        android:text="@string/create_new_account"
        android:textColor="@color/color_key"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>